--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 /* SITE THEME */
 
 :root {
-    --dark-blue: #2D6FF8;
-    --medium-blue: #278FD9;
-    --light-blue: #38D4F0;
-    --blue-green: #27D9C3;
-    --light-green: #2DF8A6;
+    --purple: #72147e;
+    --pink: #f21170;
+    --yellow: #fa9905;
+    --orange: #ff5200;
 }
 
 /* PAGE RULES */
@@ -16,13 +15,22 @@ html {
 
 body {
     margin: 0 auto;
-    background-color: var(--light-blue);
+    background-color: var(--purple);
 }
 
 #wrapper {
     margin: 0 auto;
     max-width: 960px;
     background-color: white;
+}
+
+p {
+    line-height: 1.5;
+}
+
+a {
+    text-decoration: none;
+    color: var(--pink)
 }
 
 /* HEADER */
@@ -52,12 +60,14 @@ header {
     transform:translate(-50%, -50%);
     color:white;
     margin: 0;
+    font-family: 'Dancing Script', cursive;
+    font-size: 3em;
 }
 
 /* NAV */
 
 nav {
-    background: var(--dark-blue);
+    background: var(--orange);
     margin-top: -4px;
 }
 
@@ -80,5 +90,20 @@ nav a {
 }
 
 .active {
-    background-color: var(--light-green)
+    background-color: var(--yellow)
+}
+
+/* MAIN */
+
+main {
+    margin: 0 20px;
+}
+
+/* FOOTER */
+
+footer {
+    text-align: center;
+    color: white;
+    background-color: var(--orange);
+    padding: 1px 0;
 }
