--- a/style.css
+++ b/style.css
@@ -133,11 +133,34 @@ footer {
     margin: 8px;
 }
 
-/* VIRTUAL TOUR */
+/* VIRTUAL TOUR PAGE */
 
 .video {
-    width: 96%;
+    width: 100%;
     height: 400px;
-    margin-left: 2%;
     margin-bottom: 20px;
+}
+
+/* PACKAGES PAGE */
+
+.vacation-package {
+    width: 95.5%;
+    border: 3px solid var(--orange);
+    border-radius: 20px;
+    padding: 20px;
+    padding-top: 0px;
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.vacation-package h2 {
+    color: var(--purple);
+}
+
+.spacer {
+    height: 2.5em;
+}
+
+.vacation-right {
+    margin-left: 20px;
 }
